edit bids and aud

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,14 @@ sm-table{
   height:400px;
   overflow-y:scroll;
 }
+
+.container {
+  background: #fff;
+  border-radius: 10px;
+  display: inline-block;
+  margin: 1rem;
+  position: relative;
+}
+.container-5 {
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
